# geotiff-image-filtering-openmp

./: CMakeLists.txt  INSTRUCTIONS.md  README.md
inc/: common.h  functions.h  main.h
src/: functions.c  main.c
